# UNS

./: AI-ATTRIBUTION.md  Beginners_Guide.md  CONTRIBUTING.md  Licensing Overview.md  Licensing Overview.txt  Origin-of-UNS.md  README.md  TRADEMARKS.md  UNS_Academic_Section.md  UNS_Guided_Discovery.md  UNS_Module_9_Machine_First.md  UNS_Runtime32_Spec.json  UNS_Runtime32_Spec.md  _config.yml  extract_js.py  index.md  tmp_uns_runtime_app.js  uns_runtime_app.html  vercel.json
Documentation/: License.md  README.md  UNS_Collections_Aggregates_Addendum.md  UNS_Module_1_Final.md  UNS_Module_2_Final.md  UNS_Module_3_Final.md  UNS_Module_4_Final.md  UNS_Module_5_Final.md  UNS_Module_6_Final.md  UNS_Module_7_Final.md  UNS_Module_8_Final.md  UNS_Module_9_Final.md  uns_set_vs_system_drift_preface.md
Examples/: README.md  d-transform invariance.unse  divide by zero.unse  hypotenuse.unse  injected diff pattern.unse  prime distribution.unse  sample1.unse  smoothness detection.unse
GPT/: GPT-Knowledge-Files.md  How-to-use-Tools.md  Instructions.md  Master-Guidance.md  Python-to-UNS.md  Tool-Schema-Helpers.yaml  Tool-Schema.yaml
MCU/: README.md  ROADMAP.md  build.ps1
MCU/shared/: CMakeLists.txt  README.md
MCU/shared/include/: uns_mcu_config.h  uns_mcu_math.h  uns_mcu_runtime.h
MCU/shared/src/: README.md  uns_mcu_runtime.c
MCU/shared/tests/: CMakeLists.txt  README.md  tests_main.c
Paper/: License.md  UNS_Academic_Paper.tex  uns_refs.bib
RFC/: RFC_DRAFT.txt  UNS_RFC.md
Runtime/: License.md  README.md  vercel.json
VorticitySpace/: README.md
docs/: index.md
(+113 files in other folders)
